--- a/AntonStockApp/AndroidManifest.xml
+++ b/AntonStockApp/AndroidManifest.xml
@@ -17,29 +17,29 @@
     <uses-feature android:name="android.hardware.camera.autofocus" />
 
     <application
-        android:name="ar.com.antaresconsulting.antonstockapp.AntonStockApp"
+        android:name=".AntonStockApp"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AntonTheme" >
         <activity
-            android:name="ar.com.antaresconsulting.antonstockapp.PartnerListActivity"
+            android:name=".PartnerListActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name"
-            android:parentActivityName="ar.com.antaresconsulting.antonstockapp.AntonLauncherActivity"
+            android:parentActivityName=".AntonLauncherActivity"
             android:screenOrientation="landscape" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="ar.com.antaresconsulting.antonstockapp.AntonLauncherActivity" />
         </activity>
         <activity
-            android:name="ar.com.antaresconsulting.antonstockapp.ProductListActivity"
+            android:name=".ProductListActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name"
             android:screenOrientation="landscape" >
         </activity>
         <activity
-            android:name="ar.com.antaresconsulting.antonstockapp.LoginActivity"
+            android:name=".LoginActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name"
             android:screenOrientation="landscape"
@@ -52,108 +52,112 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="ar.com.antaresconsulting.antonstockapp.PartnerDetailActivity"
+            android:name=".PartnerDetailActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/title_partner_detail"
-            android:parentActivityName="ar.com.antaresconsulting.antonstockapp.PartnerListActivity"
+            android:parentActivityName=".PartnerListActivity"
             android:screenOrientation="landscape" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="ar.com.antaresconsulting.antonstockapp.PartnerListActivity" />
         </activity>
         <activity
-            android:name="ar.com.antaresconsulting.antonstockapp.ProductDetailActivity"
+            android:name=".ProductDetailActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/title_product_detail"
-            android:parentActivityName="ar.com.antaresconsulting.antonstockapp.ProductListActivity"
+            android:parentActivityName=".ProductListActivity"
             android:screenOrientation="landscape" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="ar.com.antaresconsulting.antonstockapp.ProductListActivity" />
         </activity>
         <activity
-            android:name="ar.com.antaresconsulting.antonstockapp.InProducts"
+            android:name=".InProducts"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/title_activity_in_products"
-            android:parentActivityName="ar.com.antaresconsulting.antonstockapp.AntonLauncherActivity"
+            android:parentActivityName=".AntonLauncherActivity"
             android:screenOrientation="landscape" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="ar.com.antaresconsulting.antonstockapp.AntonLauncherActivity" />
         </activity>
         <activity
-            android:name="ar.com.antaresconsulting.antonstockapp.SubmitProducts"
+            android:name=".SubmitProducts"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/title_activity_in_products"
-            android:parentActivityName="ar.com.antaresconsulting.antonstockapp.AntonLauncherActivity"
+            android:parentActivityName=".AntonLauncherActivity"
             android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="ar.com.antaresconsulting.antonstockapp.AntonLauncherActivity" />
         </activity>
         <activity
-            android:name="ar.com.antaresconsulting.antonstockapp.ReEnterProducts"
+            android:name=".ReEnterProducts"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/title_activity_in_products"
-            android:parentActivityName="ar.com.antaresconsulting.antonstockapp.AntonLauncherActivity"
+            android:parentActivityName=".AntonLauncherActivity"
             android:screenOrientation="landscape" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="ar.com.antaresconsulting.antonstockapp.AntonLauncherActivity" />
         </activity>
         <activity
-            android:name="ar.com.antaresconsulting.antonstockapp.MoveProducts"
+            android:name=".MoveProducts"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/title_activity_out_products"
-            android:parentActivityName="ar.com.antaresconsulting.antonstockapp.AntonLauncherActivity"
+            android:parentActivityName=".AntonLauncherActivity"
             android:screenOrientation="landscape" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="ar.com.antaresconsulting.antonstockapp.AntonLauncherActivity" />
         </activity>
         <activity
-            android:name="ar.com.antaresconsulting.antonstockapp.AntonLauncherActivity"
+            android:name=".AntonLauncherActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/title_activity_launcher"
             android:screenOrientation="landscape" >
         </activity>
         <activity
-            android:name="ar.com.antaresconsulting.antonstockapp.AddProductActivity"
+            android:name=".AddProductActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/title_activity_add_product"
-            android:parentActivityName="ar.com.antaresconsulting.antonstockapp.ProductListActivity"
+            android:parentActivityName=".ProductListActivity"
             android:screenOrientation="landscape" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="ar.com.antaresconsulting.antonstockapp.ProductListActivity" />
         </activity>
         <activity
-            android:name="ar.com.antaresconsulting.antonstockapp.ConsumeInsumo"
+            android:name=".ConsumeInsumo"
             android:label="@string/title_activity_consume_insumos"
-            android:parentActivityName="ar.com.antaresconsulting.antonstockapp.AntonLauncherActivity"            
+            android:parentActivityName=".AntonLauncherActivity"
             android:screenOrientation="landscape" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="ar.com.antaresconsulting.antonstockapp.AntonLauncherActivity" />            
+                android:value="ar.com.antaresconsulting.antonstockapp.AntonLauncherActivity" />
         </activity>
         <activity
-            android:name="ar.com.antaresconsulting.antonstockapp.AddPMActivity"
+            android:name=".AddPMActivity"
             android:label="@string/title_activity_add_pm"
-            android:parentActivityName="ar.com.antaresconsulting.antonstockapp.AntonLauncherActivity"            
+            android:parentActivityName=".AntonLauncherActivity"
             android:screenOrientation="landscape" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="ar.com.antaresconsulting.antonstockapp.AntonLauncherActivity" />            
+                android:value="ar.com.antaresconsulting.antonstockapp.AntonLauncherActivity" />
         </activity>
         <activity
-            android:name="ar.com.antaresconsulting.antonstockapp.AddOEActivity"
+            android:name=".AddOEActivity"
             android:label="@string/title_activity_add_oe"
-            android:parentActivityName="ar.com.antaresconsulting.antonstockapp.AntonLauncherActivity"            
+            android:parentActivityName=".AntonLauncherActivity"
             android:screenOrientation="landscape" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="ar.com.antaresconsulting.antonstockapp.AntonLauncherActivity" />            
-        </activity>                
+                android:value="ar.com.antaresconsulting.antonstockapp.AntonLauncherActivity" />
+        </activity>
+        <activity
+            android:name=".ProductTypeActivity"
+            android:label="@string/title_activity_product_type" >
+        </activity>
     </application>
 
 </manifest>
