--- a/AntonStockApp/AndroidManifest.xml
+++ b/AntonStockApp/AndroidManifest.xml
@@ -26,10 +26,10 @@
             android:name=".AntonLauncherActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/title_activity_launcher"
-            android:screenOrientation="landscape" >
+            >
         </activity>        
         <activity
-            android:name=".PartnerListActivity"
+            android:name="ar.com.antaresconsulting.antonstockapp.partner.PartnerListActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name"
             android:screenOrientation="landscape" >
@@ -38,7 +38,7 @@
                 android:value="ar.com.antaresconsulting.antonstockapp.AntonLauncherActivity" />
         </activity>
         <activity
-            android:name=".ProductListActivity"
+            android:name="ar.com.antaresconsulting.antonstockapp.product.ProductListActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name"
             android:screenOrientation="landscape" >
@@ -56,29 +56,29 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
+        <activity        
             android:name=".PartnerDetailActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/title_partner_detail"
             android:screenOrientation="landscape" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="ar.com.antaresconsulting.antonstockapp.PartnerListActivity" />
+                android:value="ar.com.antaresconsulting.antonstockapp.partner.PartnerListActivity" />
         </activity>
         <activity
-            android:name=".ProductDetailActivity"
+            android:name="ar.com.antaresconsulting.antonstockapp.product.ProductDetailActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/title_product_detail"
             android:screenOrientation="landscape" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="ar.com.antaresconsulting.antonstockapp.ProductListActivity" />
+                android:value="ar.com.antaresconsulting.antonstockapp.product.ProductListActivity" />
         </activity>
         <activity
             android:name=".InProducts"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/title_activity_in_products"
-            android:screenOrientation="landscape" >
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="ar.com.antaresconsulting.antonstockapp.AntonLauncherActivity" />
@@ -87,7 +87,7 @@
             android:name=".SubmitProducts"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/title_activity_in_products"
-            android:screenOrientation="portrait" >
+			 >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="ar.com.antaresconsulting.antonstockapp.AntonLauncherActivity" />
